apps/shopmgr/frontend/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
 name: frontend
 namespace: shopmgr
spec:
 hostnames:
 - shopmgr.tomasmerino.com
 parentRefs:
 - name: homelab-gateway
   namespace: networking
 rules:
  - backendRefs:
    - name: frontend
      port: 80
